# packages/api-client/openapi.json
@@ -269,6 +269,30 @@
         ]
       }
     },
+    "/tasks/templates": {
+      "get": {
+        "operationId": "TaskController_getTemplates",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/TaskTemplateDto"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "tags": [
+          "Task"
+        ]
+      }
+    },
     "/tasks/{id}": {
       "get": {
         "operationId": "TaskController_findOne",
@@ -549,6 +573,47 @@
             "default": 0
           }
         }
+      },
+      "TaskTemplateDto": {
+        "type": "object",
+        "properties": {
+          "key": {
+            "type": "string"
+          },
+          "label": {
+            "type": "string"
+          },
+          "name": {
+            "type": "string"
+          },
+          "desc": {
+            "type": "string",
+            "nullable": true
+          },
+          "icon": {
+            "type": "string",
+            "nullable": true
+          },
+          "amountUnit": {
+            "type": "string",
+            "enum": [
+              "minutes"
+            ],
+            "nullable": true
+          },
+          "blocks": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/CreateTaskBlockDto"
+            }
+          }
+        },
+        "required": [
+          "key",
+          "label",
+          "name",
+          "blocks"
+        ]
       },
       "CreateTaskDto": {
         "type": "object",
